kubernetes/website/kube/0-website-ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: website
  # annotations:
  #   linkerd.io/inject: enabled
