kubernetes/website/kube/external-immich.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-service-external
  namespace: website
spec:
  clusterIP: None
  ports:
    - name: http
      protocol: TCP
      port: 2283
      targetPort: 2283

---
apiVersion: v1
kind: Endpoints
metadata:
  name: immich-service-external
  namespace: website
subsets:
  - addresses:
      - ip: 192.168.86.15 #! NOTE: update IP (Internal immich server)
    ports:
      - port: 2283
        name: http

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-ingress
  namespace: website
  annotations:
    kubernetes.io/ingressClassName: "traefik"
    traefik.ingress.kubernetes.io/router.middlewares: website-https-redirect@kubernetescrd
spec:
  tls:
  - hosts:
    - photos.evrist.net
      # no secretName specified, use default certificate
  defaultBackend:
    service:
      name: immich-service-external
      port:
        number: 2283
  rules:
  - host: photos.evrist.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: immich-service-external
            port:
              number: 2283
