kubernetes/website/kube/external-jellyfin.yaml
apiVersion: v1
kind: Service
metadata:
  name: jelly-service-external
  namespace: website
spec:
  clusterIP: None
  ports:
    - name: http
      protocol: TCP
      port: 8096
      targetPort: 8096

---
apiVersion: v1
kind: Endpoints
metadata:
  name: jelly-service-external
  namespace: website
subsets:
  - addresses:
      - ip: 192.168.86.15 # FIXME: update IP (Internal jellyfin server)
    ports:
      - port: 8096
        name: http

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jelly-ingress
  namespace: website
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.middlewares: website-https-redirect@kubernetescrd
spec:
  tls:
  - hosts:
    - jelly.brettevrist.net
      # no secretName specified, use default certificate
  defaultBackend:
    service:
      name: jelly-service-external
      port:
        number: 8096
  rules:
  - host: jelly.brettevrist.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jelly-service-external
            port:
              number: 8096
