kubernetes/website/kube/external-svn.yaml
apiVersion: v1
kind: Service
metadata:
  name: svn-service-external
  namespace: website
spec:
  clusterIP: None
  ports:
    - name: http
      protocol: TCP
      port: 18080
      targetPort: 18080

---
apiVersion: v1
kind: Endpoints
metadata:
  name: svn-service-external
  namespace: website
subsets:
  - addresses:
      - ip: 192.168.86.16 #! NOTE: update IP (Internal SVN Server)
    ports:
      - port: 18080
        name: http

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: svn-ingress
  namespace: website
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.middlewares: website-https-redirect@kubernetescrd
spec:
  tls:
  - hosts:
    - svn.brettevrist.net
      # no secretName specified, use default certificate
  defaultBackend:
    service:
      name: svn-service-external
      port:
        number: 18080
  rules:
  - host: svn.brettevrist.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svn-service-external
            port:
              number: 18080
