kubernetes/website/kube/website-ingress-traefik.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website-ingress
  namespace: website
  annotations:
    kubernetes.io/ingress.class: "traefik"
    # traefik.ingress.kubernetes.io/router.middlewares: <namespace>-<MiddlewareName>@kubernetescrd
    traefik.ingress.kubernetes.io/router.middlewares: website-redirects@kubernetescrd
spec:
  tls:
  - hosts:
    - brettevrist.net
    - www.brettevrist.net  # will get redirected by middleware
    - brettevrist.com
    - evri.st
    secretName: brettevrist-net-cert-secret
  defaultBackend:
    service:
      name: website-service
      port:
        number: 8080
  rules:
  # default backend
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: website-service
            port:
              number: 8080
  - host: brettevrist.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: website-service
            port:
              number: 8080
  - host: evri.st
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: website-service
            port:
              number: 8080
  - host: brettevrist.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: website-service
            port:
              number: 8080
  # will get redirected by middleware
  - host: www.brettevrist.net
