kubernetes/website/kube/website-play-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website-play-ingress
  namespace: website
  annotations:
    kubernetes.io/ingressClassName: "traefik"
spec:
  tls:
  - hosts:
    - play.brettevrist.net
    secretName: brettevrist-net-cert-secret
  defaultBackend:
    service:
      name: website-service
      port:
        number: 8081
  rules:
  - host: play.brettevrist.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: website-service
            port:
              number: 8081
